--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
             <br> con una marcia in più!</strong> </p>
             </div>
 
+            <div class="intromobile">
+              <p> <strong>AppNRun ti consente 
+                <br> di organizzare i tuoi eventi di running e <br> 
+                sport outdoor dinamici 
+                con una marcia in più!</strong> </p>
+                </div>
+
             <div class="descrizione">
             <p> Registrati subito per organizzare
                 <br> le tue gare in modo più efficace, 
